Home sass fixes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -403,6 +403,10 @@ span.red {
   padding: 40px 0;
 }
 
+body.home .site-content {
+  padding-top: 0;
+}
+
 .product-category {
   padding-top: 60px;
   padding-bottom: 60px;
