Home sass fixes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -276,6 +276,7 @@ footer {
     width: 100%;
     padding: 110px 0 0;
     text-align: right;
+    margin-top: 8%;
 
     .cover-title {
       text-transform: uppercase;
