--- a/sass/main.scss
+++ b/sass/main.scss
@@ -505,6 +505,51 @@ ul.category-actions {
   }
 }
 
+/*************************************/
+/*********** FORM STYLES *************/
+/*************************************/
+
+.form-circle-box .form-control {
+  background: #ececec none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 10px;
+  color: #999999;
+}
+
+button.btn-red {
+  background: #c1282d none repeat scroll 0 0;
+  border-radius: 25px;
+  color: #ffffff;
+  padding: 6px 22px;
+}
+
+.border-box {
+  border: 4px solid #ececec;
+  border-radius: 25px;
+  padding: 25px 50px;
+  width: 325px;
+  margin-left: 10%;
+
+  h4 {
+    font-size: 30px;
+  }
+}
+
+.btn.btn-border-red {
+  border: 1px solid #c1282d;
+  border-radius: 15px;
+  color: #c1282d;
+}
+
+.support-banner {
+  height: 142px;
+  h5 {
+    color: #ffffff;
+    margin: 64px;
+  }
+
+}
+
 
 
 
