--- a/sass/main.scss
+++ b/sass/main.scss
@@ -130,7 +130,7 @@ body.page header {
   }
 
   .flags img {
-    width: 18px;
+    width: 25px;
   }
 }
 
@@ -192,6 +192,13 @@ footer {
     h4 {
       color: #ebebeb;
       font-size: 26px;
+    }
+    li {
+      float: left;
+      list-style: outside none none;
+      img {
+        width: 44px;
+      }
     }
   }
 }
@@ -1005,7 +1012,7 @@ button.btn-red {
 
   li {
     display: inline-block;
-    width: (100% / 3);
+    width: (100% / 4);
     float: left;
   }
 }
@@ -1053,6 +1060,10 @@ button.btn-red {
     line-height: 1.6;
     margin-top: 20px;
   }
+}
+
+body.page .cover.slide {
+  height: 90vh;
 }
 
 .loader-container {
@@ -1119,9 +1130,19 @@ button.btn-red {
   }
 }
 
-body.page .cover.slide {
-  height: 90vh;
+#respaldo ul {
+  padding: 20px 0;
+  li {
+    float: left;
+    list-style: outside none none;
+    img {
+      width: 80px;
+    }
+  }
 }
+
+
+
 
 
 
