--- a/sass/_resets.scss
+++ b/sass/_resets.scss
@@ -10,12 +10,12 @@ a, input[type=submit] {
 }
 
 a {
-  color: #fff;
+  color: #2b2b2a;
 }
 
 a:hover, a:focus, a:active {
   text-decoration: none;
-  color: #fff;
+  color: #c1282d;
 }
 
 p {
