--- a/sass/main.scss
+++ b/sass/main.scss
@@ -419,6 +419,10 @@ span.red {
   width: 50%;
   float: right;
 
+  a:hover {
+    color: #fff;
+  }
+  
   h3 {
     color: $anclaRed;
     font-size: 55px;
@@ -435,7 +439,7 @@ span.red {
 }
 
 .site-content {
-  padding: 40px 0 0;
+  padding: 40px 0;
   position: relative;
 }
 
@@ -1113,8 +1117,8 @@ body.page .cover.slide {
   height: 120px;
   animation: spin 1.5s linear infinite;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  left: calc(50% - 60px);
+  //transform: translateX(-50%);
   top: 40%;
 }
 
