--- a/sass/_resets.scss
+++ b/sass/_resets.scss
@@ -50,6 +50,10 @@ p {
   width: 100%;
 }
 
+.pos-r {
+  position: relative;
+}
+
 .bg-img{
   background-position: 50% 50%;
   background-size: cover;
