--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1553,7 +1553,7 @@ article.post {
   }
 
   .post-title {
-    display: inline-block;
+    display: block;
     border-bottom: 1px solid #ececec;
     padding: 10px 0;
 
@@ -1760,7 +1760,8 @@ article.post {
 
 .form-submit {
 
-  margin-top: 5px;
+  margin-top: 10px;
+  float: left;
 
   input.submit {
     background-color: $anclaRed;
@@ -1807,4 +1808,82 @@ aside.blog-sidebar {
 
 }
 
+.comment-form-author,
+.comment-form-email {
+  display: block;
+  width: 50%;
+  float: left;
 
+  label {
+    display: block;
+  }
+
+  input {
+    width: 100%;
+    background: #ececec none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 10px;
+    padding: 15px 20px;
+    color: #555;
+    font-size: 16px;
+  }
+}
+
+.comment-form-author {
+  padding-right: 10px;
+}
+
+.comment-form-email {
+  padding-left: 10px;
+}
+
+.comment-form::after {
+  content: '';
+  clear: both;
+}
+
+a.post-category {
+  background-color: $anclaRed;
+  color: #fff;
+  border-radius: 10px;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 5px 10px;
+
+  &:hover {
+    background-color: $headerAndFooterBg;
+    color: #fff;
+  }
+}
+
+.blog-posts a.post-category {
+  font-size: 12px;
+  padding: 2px 8px;
+  margin-top: 10px;
+}
+
+.blog-sidebar .search-form {
+
+  form {
+    position: relative;
+  }
+
+  input.query {
+    width: 100%;
+    margin-right:0;
+    padding: 5px 10px;
+    background-color: #3b3b3a;
+  }
+
+  .fa.submit {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+
+}
