--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1941,6 +1941,7 @@ a.post-category {
   overflow: hidden;
   padding: 50px 0;
   position: relative;
+  margin-bottom: 15px;
 
    img {
     width: 100%;
