--- a/sass/main.scss
+++ b/sass/main.scss
@@ -301,7 +301,7 @@ footer {
     width: 100%;
     padding: 110px 0 0;
     text-align: right;
-    margin-top: 8%;
+    margin-top: 4%;
 
     .cover-title {
       text-transform: uppercase;
@@ -322,7 +322,8 @@ footer {
   }
 }
 
-body.page .cover {
+body.page .cover,
+body.tax-product_cat .cover {
   background-attachment: fixed;
   height: 60vh;
 }
@@ -358,7 +359,7 @@ span.red {
   padding: 20px 0;
   position: relative;
 
-  h3 {
+  h1, h3 {
     color: #fff;
     text-transform: uppercase;
     text-align: center;
@@ -381,6 +382,10 @@ span.red {
     left: 50%;
     transform: translateX(-50%);
   }
+}
+
+body.tax-product_cat .red-section-header {
+  margin-bottom: 40px;
 }
 
 .red-section-header.no-triangle::after {
@@ -1962,6 +1967,7 @@ a.post-category {
   }
 
   .category-title {
+    background-color: rgba(43,43,42,0.9);
     display: block;
     max-width: 40%;
     margin: 0 auto;
@@ -1985,12 +1991,17 @@ a.post-category {
       left: 100%;
     }
 
-    h1 {
+    h1, h2 {
       text-transform: uppercase;
-      background-color: rgba(43,43,42,0.9);
       color: #fdfdfd;
       padding: 25px 20px;
       font-size: 30px;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin: -25px 0 0;
+      padding: 0 0 10px;
     }
   }
 }
@@ -2046,4 +2057,8 @@ ul.sub-menu.submenu-grid li a {
    ul.sub-menu {
     background-color: $headerAndFooterBgWTransparency;
   }
+}
+
+.fixed-bg {
+  background-attachment: fixed;
 }
