--- a/sass/main.scss
+++ b/sass/main.scss
@@ -596,13 +596,12 @@ ul.category-actions {
   }
 
   .item-hover {
-    opacity: 0;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: $anclaRed;
+    background-color: rgba(0,0,0,.35);
     background-blend-mode: multiply;
 
     @include hover_transition;
@@ -623,7 +622,7 @@ ul.category-actions {
   }
 
   &:hover .item-hover {
-    opacity: 1;
+    background-color: $anclaRed;
   }
 }
 
