--- a/sass/main.scss
+++ b/sass/main.scss
@@ -637,10 +637,10 @@ ul.category-actions {
     position: relative;
   }
 
-  .cover-img {
-    background-size: contain;
-    background: no-repeat fixed 0 9%;
-  }
+  //.cover-img {
+  //  background-size: contain;
+  //  background: no-repeat fixed 0 9%;
+  //}
 
   .cover-img, .container {
     height: 100%;
@@ -694,7 +694,7 @@ ul.category-actions {
     }
 
     img {
-      width: 52px;
+      width: 53px;
       box-shadow: inset 0px -20px 16px 19px rgba(0,198,255,.75), 1px 3px 16px 2px rgba(0,198,255,0.75);
       border-radius: 50%;
       opacity: 0.95;
